--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 *.sln
+/.vs/kgy_Webapi/v15/Server/sqlite3
+/.vs/kgy_Webapi/v15
+/.vs
+*.user
